# TTSV

./: .env.template  .gitmodules  README.md  __init__.py  main.ipynb  pyproject.toml
text_input/: Test-de.txt  Test-en.txt  TestFull-de.txt  TestFull-en.txt
ttsv/: config.py  generate_video.py  main.py  merge.py  model.py  process_file.py  utils.py  video_config.json  youtube_upload.py
