[project]
name = "TTSV"
version = "0.1.0"
description = "Text-to-speech solution"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.0.0",
    "scipy>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.0.285"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

include = ["ttsv"]
